Fixes on drop down not showing with help of mentor

--- a/style.css
+++ b/style.css
@@ -5,45 +5,57 @@
 }
 
 :focus {
-
   outline: none;
- /* TODO */
+  /* TODO */
 }
 
 body {
-  background: rgb(2,0,36);
-  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(253,253,44,1) 0%, rgba(221,105,0,1) 100%);
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    90deg,
+    rgba(2, 0, 36, 1) 0%,
+    rgba(253, 253, 44, 1) 0%,
+    rgba(221, 105, 0, 1) 100%
+  );
   /* TODO */
 }
 
 input {
-    background-color: transparent;
-    border: none;
-    border-bottom: 2px solid #333;
-    font-size: 25px;
-    position: relative;
-    display: block;
-    outline: none;
-    width: 400px;
-    height: 30p;
-    top: 400px;
-    margin: 0 auto;
-    padding: 10px;
-    color: #333;
-    -webkit-box-shadow: 0 2px 10px 1px rgba(0,0,0,0.5);
-    box-shadow: 0 2px 10px 1px rgba(0,0,0,0.5);
-  }
-  ::-webkit-input-placeholder { color: #666;} 
-  :-moz-placeholder { color: #666; }
-  ::-moz-placeholder { color: #666; }
-  :-ms-input-placeholder { color: #666; }
- /* TODO */
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid #333;
+  font-size: 25px;
+  position: relative;
+  display: block;
+  outline: none;
+  width: 400px;
+  height: 30p;
+  top: 400px;
+  margin: 0 auto;
+  padding: 10px;
+  color: #333;
+  -webkit-box-shadow: 0 2px 10px 1px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 2px 10px 1px rgba(0, 0, 0, 0.5);
+}
+::-webkit-input-placeholder {
+  color: #666;
+}
+:-moz-placeholder {
+  color: #666;
+}
+::-moz-placeholder {
+  color: #666;
+}
+:-ms-input-placeholder {
+  color: #666;
+}
+/* TODO */
 
 .search-container {
   text-align: center;
   display: block;
   position: relative;
-/* TODO */
+  /* TODO */
 }
 .search-container input,
 .search-container .suggestions {
@@ -60,30 +72,20 @@ input {
   text-align: center;
   position: relative;
 
- /* TODO */
+  /* TODO */
 }
 .search-container .suggestions {
   display: block;
   position: relative;
   top: 400px;
   margin: 0 auto;
- 
-   /* TODO */
+
+  /* TODO */
 }
 
 ul {
   display: block;
-  position: relative;
-  width: 400px;
-  height: 30p;
-  top: 400px;
-  margin: 0 auto;
-  padding: 10px;
-  color: #333;
   background-color: white;
-  font-size: 25px;
-  opacity: 0;
-  pointer-events: none;
 
   /* TODO */
 }
@@ -92,24 +94,24 @@ ul.has-suggestions {
   position: relative;
   top: 400px;
   margin: 0 auto;
-  
+
   /* TODO */
 }
-ul li{
+ul li {
   display: block;
   list-style: none;
-  color: #333
+  color: #333;
   background-color: transparent;
   cursor: pointer;
   width: 400px;
   position: relative;
- /* TODO */
+  /* TODO */
 }
 ul li:hover {
   background: #efefef;
   background-color: transparent;
   color: #5ef606;
-/* TODO */
+  /* TODO */
 }
 
 /* input {
